<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control_custom_interfaces</name>
  <version>3.7.60</version>
  <description>ROS2 custom interfaces for OmniBot using Dynamixel SDK.</description>
  <maintainer email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</maintainer>
  <license>MIT license</license>
  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
  <url type="repository">https://github.com/Vinay046/robot-control-custom-interfaces.git</url>
  <author email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
